# DistributedFileShare

./: CMakeLists.txt  README.md
database/: schema.sql
docs/: SETUP.md  TESTING.md  requirements.txt
frontend/: index.html  script.js  styles.css
src/: Database.cpp  Database.h  FileManager.cpp  FileManager.h  User.cpp  User.h  Utils.cpp  Utils.h  WebServer.cpp  WebServer.h  main.cpp
